--- a/MultiRocket-3/style.css
+++ b/MultiRocket-3/style.css
@@ -9,11 +9,12 @@
     /*จากตรงกลาง*/
     --Time_anime: 1s;
     /*เวลาที่ใช้ในการสไลด์*/
-    --Size_img: 200px;
+    --Size_img: 150px;
     --Size_img_mini: 45px;
-    --Size_img_big: 300px;
+    --Size_img_big: 250px;
     --Jump_time:0.53s;/*เวลาที่ใช้ในการกระโดด*/
     --Jump_height:50px;/*ความสูงในการกระโดด*/
+    --Status_play:running;
 }
 
 html {
@@ -48,13 +49,16 @@ img {
   height: 60px;
   width: 20px;
   background: yellow;
+  color: gray;
+  font-size: 30px;
 }
 
-.jumpping{/*ยังมีบัคไม่ยอมกระโดดตอนเปลี่ยนดาว*/
-  animation: jump var(--Jump_time) ease-in-out;/*กระโดดขึ้นแล้วร่วงลงมา*/
+.jumpping{/*กระโดด*/
+  animation-play-state: running !important;/*ให้ run animation !important บังคับให้ run code ส่วนนี้*/
+  animation: jump var(--Jump_time) ease-in-out !important;/*กระโดดขึ้นแล้วร่วงลงมา*/
 }
 
-@keyframes jump {/*ยังมีบัคไม่ยอมกระโดดตอนเปลี่ยนดาว*/
+@keyframes jump {
     0% {
         margin-bottom: 0;
         background: red;
