--- a/MultiRocket-3/style.css
+++ b/MultiRocket-3/style.css
@@ -229,7 +229,8 @@ img {
     display: inline-block;
     /* ทำให้ปุ่มดาวเคราะห์อยู่แถวเดี่ยวกัน */
     margin-left: 30px;
-    margin-top: 350px;
+    /* margin-top: 350px; */
+    margin-top: auto;
 }
 
 .img_mini {
