--- a/MultiRocket-3/style.css
+++ b/MultiRocket-3/style.css
@@ -210,13 +210,12 @@ img {
 /*---------------------------------แถว ดาวเคราะห์-------------------------------------*/
 
 .human {
-    height: 60px;
-    width: 20px;
-    background: yellow;
+    /* height: 60px;
+    width: 20px; */
+    /* background: yellow; */
     color: gray;
     font-size: 30px;
     font-family: 'Neucha', cursive;
-
 
 }
 
@@ -231,19 +230,15 @@ img {
 @keyframes jump {
     0% {
         margin-bottom: 0;
-        background: red;
     }
     46% {
         margin-bottom: var(--Jump_height);
-        background: green;
     }
     54% {
         margin-bottom: var(--Jump_height);
-        background: blue;
     }
     100% {
         margin-bottom: 0;
-        background: yellow;
     }
 }
 
