--- a/MultiRocket-3/style.css
+++ b/MultiRocket-3/style.css
@@ -27,7 +27,22 @@ html {
 
 
 }
+h1 a{
+    display : inline-block;
+    text-decoration:none;
+    padding: 5px 20px;
+    border: 1px solid rgb(136, 136, 136);
+    transition: 0.6s ease;
+    font-size: 30px;
+}
+h1 a:hover{
+    background-color: rgb(136, 136, 136);
 
+}
+.text{
+    margin-top: 25px;
+    
+}
 h1{
     color: white;
     font-family: 'Neucha', cursive;
@@ -37,6 +52,8 @@ h1{
 }
 
 body {
+    background-color: black !important;
+    font-family: 'Neucha', cursive;
     background: black;
     /*สีพื้นหลัง*/
 }
