--- a/MultiRocket-3/style.css
+++ b/MultiRocket-3/style.css
@@ -756,7 +756,7 @@ input::-webkit-inner-spin-button {
  .view p {
     font-family: Georgia, serif;
     font-style: italic;
-    font-size: 17px;
+    font-size: 13px;
     position: relative;
     color: #fff;
     padding: 10px 20px 20px;
@@ -767,7 +767,7 @@ input::-webkit-inner-spin-button {
     text-decoration: none;
     padding: 7px 14px;
     background: #000;
-    color: #fff;
+    color: #fff;.
     text-transform: uppercase;
     -webkit-box-shadow: 0 0 1px #000;
     -moz-box-shadow: 0 0 1px #000;
