--- a/MultiRocket-3/style.css
+++ b/MultiRocket-3/style.css
@@ -948,7 +948,7 @@ input::-webkit-inner-spin-button {
     text-decoration: none;
     padding: 7px 14px;
     background: #000;
-    color: #fff;.
+    color: #fff;
     text-transform: uppercase;
     -webkit-box-shadow: 0 0 1px #000;
     -moz-box-shadow: 0 0 1px #000;
