--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -1,54 +1,164 @@
-    html,
-    body {
-        background-color: black !important;
-        color: #fff !important;
-        /* overflow-x: hidden; */
+html,
+body,
+#app {
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+}
+
+body {
+    background: #000;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #eee;
+    margin: 0;
+    padding: 0;
+}
+
+.swiper-container {
+    width: 100%;
+    height: 100%;
+    transition: 1s;
+    margin-top: 100px;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: transparent;
+}
+
+.main {
+    height: 40%;
+    position: relative;
+}
+
+.main img {
+    height: 300px;
+    width: 300px;
+}
+
+.submain {
+    height: 100%;
+    position: relative;
+}
+
+.swiper-pagination {
+    height: 5%;
+    position: fixed;
+    bottom: 0px !important;
+    background-color: #000a;
+}
+
+.slideshow-container {
+    max-width: 100%;
+    height: 300px;
+    position: relative;
+    margin: 5%;
+}
+
+.slideshow-container img {
+    height: 100%;
+    width: 100%;
+}
+
+.mySlides {
+    background-color: #000a;
+}
+
+.mySlides img {
+    width: 200px;
+    height: 200px;
+}
+
+.mySlides2 {
+    background-color: #000a;
+}
+
+.mySlides2 img {
+    width: 200px;
+    height: 200px;
+}
+
+.mySlides4 {
+    background-color: #000a;
+}
+
+.mySlides4 img {
+    width: 200px;
+    height: 200px;
+}
+
+.mySlides7 {
+    background-color: #000a;
+}
+
+.mySlides7 img {
+    width: 200px;
+    height: 200px;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev {
+    left: 0;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
     }
-    
-    .slide {
-        width: max-content;
-        position: fixed;
-        /* 24em */
-        top: 25%;
-        transition: 0.3s;
-        margin: 0;
+    to {
+        opacity: 1
     }
-    
-    .show {
-        background-color: transparent;
-        display: inline-block;
-        margin-right: 135px;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
     }
-    
-    .planet {
-        text-align: center;
-        display: inline-block;
-        width: max-content;
+    to {
+        opacity: 1
     }
-    
-    .showplanet {
-        width: 250px;
-        height: 250px;
-        display: inline-block;
-    }
-    
-    .supshow {
-        text-align: center;
-        display: inline-block;
-        margin-left: 135px;
-    }
-    
-    .slideLeft {
-        top: 25%;
-        position: fixed;
-        width: 50%;
-        height: 300px;
-    }
-    
-    .slideRight {
-        top: 25%;
-        left: 50%;
-        position: fixed;
-        width: 50%;
-        height: 300px;
-    }
+}
