--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -55,6 +55,7 @@ body {
     height: 300px;
     position: relative;
     margin: 5%;
+    margin-bottom: 0%;
 }
 
 .slideshow-container img {
@@ -136,6 +137,22 @@ body {
     bottom: 8px;
     width: 100%;
     text-align: center;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
 }
 
 .fade {
