--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -1,9 +1,9 @@
 html,
 body,
-#app {
+{
     position: relative;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 body {
@@ -19,7 +19,7 @@ body {
     width: 100%;
     height: 100%;
     transition: 1s;
-    margin-top: 100px;
+    margin-top: 0px;
 }
 
 .swiper-slide {
@@ -29,7 +29,7 @@ body {
 }
 
 .main {
-    height: 40%;
+    /* height: 50%; */
     position: relative;
 }
 
