--- a/งานสถาปัต/style.css
+++ b/งานสถาปัต/style.css
@@ -212,6 +212,11 @@ html{
     color: white;
     font-family: var(--text_font);
 }
+
+.contact_info a{
+    text-decoration: none;
+    color: white;
+}
 /*หน้า Contact*/
 
 .topic_text{
