--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -49,7 +49,7 @@ body {
 
 .swiper-pagination {
     margin-top: 5%;
-    margin-bottom: 5%;
+    /* margin-bottom: 3%; */
     right: 0;
     left: 0;
 }
