--- a/งานสถาปัต/style.css
+++ b/งานสถาปัต/style.css
@@ -248,3 +248,27 @@ html{
 }
 
 /* ปุ่มด้านล่าง*/
+
+/* หน้าจอ Tablets */
+@media screen and (max-width: 1280px) {
+    .container{
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    .menu {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+}
+
+/* หน้าจอ Phones */
+@media screen and (max-width: 768px) {
+    .container{
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    .menu {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+  }
