--- a/งานสถาปัต/style.css
+++ b/งานสถาปัต/style.css
@@ -260,6 +260,7 @@ html{
         padding-right: 0 !important;
     }
 }
+/* หน้าจอ Tablets */
 
 /* หน้าจอ Phones */
 @media screen and (max-width: 768px) {
@@ -271,4 +272,5 @@ html{
         padding-left: 0 !important;
         padding-right: 0 !important;
     }
-  }
+}
+/* หน้าจอ Phones */
