--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -1,11 +1,10 @@
-        html,
-        .app {
+        html {
             height: 100%;
             /* overflow: hidden; */
         }
         
         body {
-            height: 100%;
+            height: 200%;
             background: #000;
             font-family: 'Ubuntu', sans-serif;
             font-size: 14px;
@@ -848,7 +847,9 @@
             box-sizing: border-box;
         }
         
-        #section2 {}
+        #section2 {
+            margin-top: 50%;
+        }
         
         h1 {}
         /* หน้ากรอก นน */
@@ -1311,8 +1312,7 @@
             transform: rotate(-45deg);
             box-sizing: border-box;
         }
-
-        /*  .view { 
+        /*  .view {
             width: 300px;
             height: 200px;
             margin: 20px;
@@ -1327,7 +1327,7 @@
             cursor: default;
             background: #fff url(../images/bgimg.jpg) no-repeat center center;
         }
-        
+
         .view .mask,
         .view .content {
             width: 300px;
@@ -1337,12 +1337,12 @@
             top: 0;
             left: 0;
         }
-        
+
         .view img {
             display: block;
             position: relative;
         }
-        
+
         .view h2 {
             text-transform: uppercase;
             color: #fff;
@@ -1353,7 +1353,7 @@
             background: rgba(0, 0, 0, 0.8);
             margin: 20px 0 0 0;
         }
-        
+
         .view p {
             font-family: Georgia, serif;
             font-style: italic;
@@ -1363,7 +1363,7 @@
             padding: 10px 20px 20px;
             text-align: center;
         }
-        
+
         .view a.info {
             display: inline-block;
             text-decoration: none;
@@ -1375,14 +1375,14 @@
             -moz-box-shadow: 0 0 1px #000;
             box-shadow: 0 0 1px #000;
         }
-        
+
         .view a.info hover {
             -webkit-box-shadow: 0 0 5px #000;
             -moz-box-shadow: 0 0 5px #000;
             box-shadow: 0 0 5px #000;
         }
-        
-        
+
+
         /* NINTH EXAMPLE*/
         /*
         .view-ninth .mask-1,
@@ -1399,7 +1399,7 @@
             -o-transition: all 0.3s ease-in-out 0.6s;
             transition: all 0.3s ease-in-out 0.6s;
         }
-        
+
         .view-ninth .mask-1 {
             left: auto;
             right: 0;
@@ -1414,7 +1414,7 @@
             -ms-transform-origin: 100% 0%;
             transform-origin: 100% 0%;
         }
-        
+
         .view-ninth .mask-2 {
             top: auto;
             bottom: 0;
@@ -1429,7 +1429,7 @@
             -ms-transform-origin: 0% 100%;
             transform-origin: 0% 100%;
         }
-        
+
         .view-ninth .content {
             background: rgba(0, 0, 0, 0.9);
             height: 0;
@@ -1453,17 +1453,17 @@
             -o-transition: all 0.4s ease-in-out 0.3s;
             transition: all 0.4s ease-in-out 0.3s;
         }
-        
+
         .view-ninth h2 {
             background: transparent;
             margin-top: 5px;
             border-bottom: 1px solid rgba(255, 255, 255, 0.2);
         }
-        
+
         .view-ninth a.info {
             display: none;
         }
-        
+
         .view-ninth:hover .content {
             height: 120px;
             width: 300px;
@@ -1477,7 +1477,7 @@
             -ms-transform: rotate(0deg) translate(0, 0);
             transform: rotate(0deg) translate(0, 0);
         }
-        
+
         .view-ninth:hover .mask-1,
         .view-ninth:hover .mask-2 {
             -webkit-transition-delay: 0s;
@@ -1485,7 +1485,7 @@
             -o-transition-delay: 0s;
             transition-delay: 0s;
         }
-        
+
         .view-ninth:hover .mask-1 {
             -webkit-transform: rotate(56.5deg) translateX(1px);
             -moz-transform: rotate(56.5deg) translateX(1px);
@@ -1493,7 +1493,7 @@
             -ms-transform: rotate(56.5deg) translateX(1px);
             transform: rotate(56.5deg) translateX(1px);
         }
-        
+
         .view-ninth:hover .mask-2 {
             -webkit-transform: rotate(56.5deg) translateX(-1px);
             -moz-transform: rotate(56.5deg) translateX(-1px);
@@ -1501,7 +1501,7 @@
             -ms-transform: rotate(56.5deg) translateX(-1px);
             transform: rotate(56.5deg) translateX(-1px);
         }
-        
+
         .photo {
             max-width: 100%;
             height: auto;
