--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -2,6 +2,21 @@
             height: 100%;
             /* overflow: hidden; */
         }
+        /* width */
+        
+         ::-webkit-scrollbar {
+            width: 10px;
+        }
+        /* Track */
+        
+         ::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        
+         ::-webkit-scrollbar-thumb {
+            background: rgba(255, 255, 255, 0.37);
+            border-radius: 10px;
+        }
         
         body {
             height: 200%;
